[package]
name = "pricing_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"] }
dotenv = "0.13"
figment = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.0.0"
log = "0.4"
pretty_env_logger = "0.3"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.17"


